src/objects/Story__c.object
<CustomObject>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NumberOfPublicActivities__c</fullName>
        <label>Number of Public Activities</label>
        <summaryFilterItems>
            <field>Activity__c.Status__c</field>
            <operation>equals</operation>
            <value>Public</value>
        </summaryFilterItems>
        <summaryForeignKey>Activity__c.Story__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_Duration__c</fullName>
        <label>Project Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <label>Publisher</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remaining_Budget__c</fullName>
        <label>Remaining Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Offering__c</fullName>
        <label>Service Offering</label>
        <picklist>
            <picklistValues>
                <fullName>Analytics and Data Management Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applications Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Process Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Center, Workload and Cloud Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Security Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobility and Workplace Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Story</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>User Story Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>